remove intraday from search criteria

--- a/example/wapi-notebook.ipynb
+++ b/example/wapi-notebook.ipynb
@@ -53,8 +53,8 @@
     "offline.offline.init_notebook_mode(connected=True)\n",
     "\n",
     "curves = session.search(commodity='POW', \n",
-    "                        category=['WND', 'Intraday'],\n",
-    "                        unit='MWH/H',\n",
+    "                        category='WND',\n",
+    "                        unit='MWh/h',\n",
     "                        area='DK1',\n",
     "                        data_type=['A', 'F']\n",
     "                       )\n",
