datetime.strptime to dateutil.parser.parse

--- a/example/wapi-notebook.ipynb
+++ b/example/wapi-notebook.ipynb
@@ -48,6 +48,7 @@
     "import plotly.graph_objs as go\n",
     "import plotly.tools as tls\n",
     "from datetime import datetime, timedelta\n",
+    "from dateutil import parser\n",
     "\n",
     "session = wapi.Session(client_id='client_id', client_secret='client_secret')\n",
     "offline.offline.init_notebook_mode(connected=True)\n",
@@ -1025,10 +1026,7 @@
    "source": [
     "curve = intraday_curves[0]\n",
     "latest_instance = curve.get_latest(with_data=False)\n",
-    "issue_date_str = latest_instance.issue_date\n",
-    "issue_date = latest_instance.tz.localize(\n",
-    "    datetime.strptime(latest_instance.issue_date, \n",
-    "                      \"%Y-%m-%dT%H:%M:%SZ\"))\n",
+    "issue_date = parser.parse(latest_instance.issue_date).astimezone(tz=latest_instance.tz)\n",
     "value_date = issue_date + timedelta(minutes=15)\n",
     "index = []\n",
     "values = []\n",
