--- a/releases/relnote-0.7.1
+++ b/releases/relnote-0.7.1
@@ -1,2 +1,8 @@
 Fix regression that prevented python 2.7 from working
 with a configuration file.
+
+Fix parsing of absolute forecast data_date parameter.
+
+Update docs for durations to indicate that we only
+support up to days, i.e. weeks, months, years cannot
+be specified.
