Note that we will be dropping py2.7-support soon.

--- a/releases/relnote-0.7.1
+++ b/releases/relnote-0.7.1
@@ -6,3 +6,5 @@ Fix parsing of absolute forecast data_date parameter.
 Update docs for durations to indicate that we only
 support up to days, i.e. weeks, months, years cannot
 be specified.
+
+Note: This is the last planned release to support python 2.7
