--- a/releases/relnote-0.7.7
+++ b/releases/relnote-0.7.7
@@ -1,2 +1,4 @@
 Add retry support when updating auth headers. Must be turned on by setting
 retry_update_auth=True when initialising the Session.
+
+Volue branding changes.
