update release note

--- a/releases/relnote-0.7.8
+++ b/releases/relnote-0.7.8
@@ -1,1 +1,2 @@
 Changing github organisation name from wattsight to volueinsight.
+Fix the authentication issue when Session is shared among multiple threads.
