remove pytz deps

--- a/example/wapi-notebook.ipynb
+++ b/example/wapi-notebook.ipynb
@@ -42,7 +42,7 @@
    ],
    "source": [
     "import wapi\n",
-    "import pytz\n",
+    "from zoneinfo import ZoneInfo\n",
     "import pandas as pd\n",
     "import plotly.offline as offline\n",
     "import plotly.graph_objs as go\n",
@@ -729,7 +729,7 @@
     "intraday_curves = [c for c in curves if 'INTRADAY' in c.categories]\n",
     "data = {}\n",
     "label = {}\n",
-    "issue_date = pytz.timezone('CET').localize(datetime(2018, 4, 12))\n",
+    "issue_date = datetime(2018, 4, 12).replace(tzinfo=ZoneInfo(\"CET\"))\n",
     "date_from = issue_date + timedelta(minutes=15)\n",
     "date_to = date_from + timedelta(hours=24)\n",
     "for c in intraday_curves:\n",
@@ -8686,7 +8686,7 @@
    "source": [
     "data = {}\n",
     "label = {}\n",
-    "issue_date = pytz.timezone('CET').localize(datetime(2018, 4, 12))\n",
+    "issue_date = datetime(2018, 4, 12).replace(tzinfo=ZoneInfo(\"CET\")) \n",
     "date_to = date_from + timedelta(days=14)\n",
     "for c in curves_at00:\n",
     "    ts = None\n",
@@ -8743,7 +8743,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 ('wapi-py39')",
    "language": "python",
    "name": "python3"
   },
@@ -8757,7 +8757,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "83f5e404c05ec43b9dd1d30832e26208047be11af19d987b329f61a312995040"
+   }
   }
  },
  "nbformat": 4,
